log
Tue 26 Sep 2023 10:30:41 PM UTC: 
 tests:  0|4
total_score: 0/70
74fe543
Tue 26 Sep 2023 10:42:19 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:3: error: unknown type name ‘heap’; did you mean ‘Heap’?
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |   ^~~~
      |   Heap
heap.c:36:17: error: ‘heap’ undeclared (first use in this function); did you mean ‘Heap’?
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |                 ^~~~
      |                 Heap
heap.c:36:17: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:22: error: expected ‘,’ or ‘;’ before ‘malloc’
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |                      ^~~~~~
heap.c:36:9: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   36 |   heap* nuevo= (heap)malloc(sizeof(heap));
      |         ^~~~~
heap.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
110c930
